refine the docs

--- a/phala-cloud/confidential-ai/overview.mdx
+++ b/phala-cloud/confidential-ai/overview.mdx
@@ -52,19 +52,19 @@ Traditional cloud AI deployments expose your models and data to the cloud provid
   </Card>
 </Columns>
 
-## Quick Through from Confidential AI
+## Quick Tour of Confidential AI
 
 ### API and Models
 
-Here are two products, Confidential AI API and Confidential AI Models.
+Choose the option that fits your needs:
 
-[Confidential AI API](/phala-cloud/confidential-ai/confidential-model/confidential-ai-api) provides a pre-deployed LLM inference service with an OpenAI-compatible interface, making it easy to integrate into your applications. 
+[Confidential AI API](/phala-cloud/confidential-ai/confidential-model/confidential-ai-api) offers pre-deployed LLMs with OpenAI-compatible APIs for quick integration.
 
-And [Confidential AI Models](/phala-cloud/confidential-ai/confidential-model/confidential-ai-models) enables you to deploy and manage your own AI models in GPU TEE.
+[Confidential AI Models](/phala-cloud/confidential-ai/confidential-model/confidential-ai-models) lets you deploy and manage custom AI models in GPU TEE.
 
 ### Confidential GPU
 
-If you want to deploy custom model with complete control over your infrastructure, check [Confidential GPU](/phala-cloud/confidential-ai/confidential-gpu/overview) to depoy with various GPU configurations, configure CPU, RAM, and storage to match your workload requirements based on your needs.
+For complete infrastructure control, use [Confidential GPU](/phala-cloud/confidential-ai/confidential-gpu/overview) to deploy custom models. Configure GPU, CPU, RAM, and storage to match your exact workload needs.
 
 
 ### Verify Attestation and Signature
