update opensource foundation

--- a/phala-cloud/confidential-ai/overview.mdx
+++ b/phala-cloud/confidential-ai/overview.mdx
@@ -111,10 +111,4 @@ Check [FAQs](/phala-cloud/confidential-ai/faqs) for frequently asked questions a
 
 ## Open Source Foundation
 
-Our underlying technology is open source. Check out the [private-ml-sdk](https://github.com/nearai/private-ml-sdk) repository to see how LLMs run securely in GPU TEEs. This project was built by Phala Network with support from NEARAI.
-
-<Frame caption="Open Source Implementation: Private ML SDK">
-  <img
-    src="/images/confidential-ai/confidential-model/private-ml-sdk-repo.png"
-  />
-</Frame>
+Our underlying technology is open source. Check out the [dstack](https://github.com/Dstack-TEE/dstack) repository to see how LLMs run securely in GPU TEEs.
