refine confidential ai

--- a/phala-cloud/confidential-ai/confidential-gpu/model-template.mdx
+++ b/phala-cloud/confidential-ai/confidential-gpu/model-template.mdx
@@ -1,11 +1,11 @@
 ---
-description: Deploy and manage AI models in a secure, confidential computing environment
-title: Deploy Models
+description: This guide will help you deploy and manage AI models in a secure, confidential computing environment
+title: Model Template
 ---
 
-<Note>
-Deploy your AI models in a secure, isolated environment with hardware-level protection. Phala Cloud's Confidential AI Models service runs your models inside TEE on GPU hardware, ensuring your data and model weights stay private.
-</Note>
+## Overview
+
+If your preferred model isn't available in the Confidential AI API, you can deploy and manage custom AI models using our model template on GPU TEE.
 
 ## Deploy Your Model
 
