--- a/phala-cloud/confidential-ai/overview.mdx
+++ b/phala-cloud/confidential-ai/overview.mdx
@@ -1,5 +1,5 @@
 ---
-description: Run and inference LLMs securely in GPU TEE for confidential AI.
+description: This overview introduces Confidential AI, running AI models with hardware-level privacy in GPU TEEs. Explain how to use Confidential AI to inference LLMs, deploy custom models, and run AI workloads with verifiable attestation and near-native performance.
 title: Overview
 ---
 
@@ -7,15 +7,11 @@ title: Overview
   src="/images/confidential-ai/confidential-ai-overview.jpeg"
 />
 
-<Note>
-Run AI models with enterprise-grade security without sacrificing performance. Phala Cloud Confidential AI protects your models and data using GPU TEE - hardware-isolated environments that keep your AI workloads private and verifiable.
-</Note>
-
 ## Why Confidential AI?
 
-Traditional cloud AI deployments expose your models and data to the cloud provider. Confidential AI solves this by running everything inside hardware-protected TEE. Your models stay private, your data stays secure, and you get cryptographic proof that execution happened in a trusted environment.
+Traditional cloud AI deployments expose your models and data to the cloud provider. Confidential AI addresses this by running everything inside hardware-protected TEE. Your models stay private, your data stays secure, and you get cryptographic proof that execution happened in a trusted environment.
 
-## Try Confidential AI
+Confidential AI has these essential features of inferencing pre-deployed LLMs, deploying custom models, or using entire GPU infrastructures with TEE to protect your models and data.
 
 <Columns cols={2}>
   <Card
@@ -56,15 +52,15 @@ Traditional cloud AI deployments expose your models and data to the cloud provid
 
 ### API and Models
 
-Choose the option that fits your needs:
+[Use API](/phala-cloud/confidential-ai/confidential-model/confidential-ai-api) introduces pre-deployed LLMs with OpenAI-compatible APIs for quick integration.
 
-[Confidential AI API](/phala-cloud/confidential-ai/confidential-model/confidential-ai-api) offers pre-deployed LLMs with OpenAI-compatible APIs for quick integration.
-
-[Confidential AI Models](/phala-cloud/confidential-ai/confidential-model/confidential-ai-models) lets you deploy and manage custom AI models in GPU TEE.
+For advanced use cases, [Tool Calling](/phala-cloud/confidential-ai/confidential-model/tool-calling) enables LLMs to interact with external tools and APIs securely within TEE.
 
 ### Confidential GPU
 
-For complete infrastructure control, use [Confidential GPU](/phala-cloud/confidential-ai/confidential-gpu/overview) to deploy custom models. Configure GPU, CPU, RAM, and storage to match your exact workload needs.
+[Model Template](/phala-cloud/confidential-ai/confidential-gpu/model-template) lets you deploy and manage custom AI models in GPU TEE if current models in API do not meet your needs.
+
+For complete infrastructure control, you can use [Confidential GPU](/phala-cloud/confidential-ai/confidential-gpu/gpu-tee) to deploy custom models for inference or training/fine-tuning. Configure GPU, CPU, RAM, and storage to match your exact workload needs.
 
 
 ### Verify Attestation and Signature
@@ -80,34 +76,11 @@ Our performance [benchmark](/phala-cloud/confidential-ai/benchmark) shows TEE mo
 
 Check [FAQs](/phala-cloud/confidential-ai/faqs) for frequently asked questions about Confidential AI.
 
-
 ## What makes Phala Cloud Confidential AI Different?
 
-<Columns cols={2}>
-  <Card
-    icon="webhook"
-    href="/phala-cloud/confidential-ai/confidential-model/confidential-ai-api"
-    title="API and Models"
-  >
-    Pre-deployed LLM inference API with OpenAI-compatible interface
-  </Card>
-  <Card
-    icon="microchip"
-    title="Confidential GPU"
-    href="/phala-cloud/confidential-ai/confidential-gpu/overview"
-  >
-    Rent dedicated GPU TEE servers for custom model deployment
-  </Card>
-</Columns>
-
-- **Use existing code**: Drop-in replacement for OpenAI APIs
-- **Popular models**: DeepSeek, Llama, GPT-OSS, and Qwen models ready to use
-- **Verify execution**: Get attestation reports proving your code ran in TEE
-- **Pay as you go**: Only pay for what you use
-- **Custom models**: Run your own fine-tuned or proprietary models
-- **High performance**: H200, H100, and B200 GPUs available
-- **Full control**: Configure CPU, RAM, storage, and location
-- **Flexible scaling**: 1 or 8 GPUs per server, various commitment options
+- **Seamless integration**: Drop-in OpenAI API compatibility with popular models (DeepSeek, Llama, GPT-OSS, Qwen) ready for immediate use
+- **Verifiable security**: Hardware-enforced privacy with cryptographic attestation proving execution in genuine TEE environments
+- **Flexible deployment**: Choose from pre-deployed APIs, custom model hosting, or dedicated GPU infrastructure with full configuration control
 
 ## Open Source Foundation
 
