--- a/phala-cloud/confidential-ai/confidential-gpu/model-template.mdx
+++ b/phala-cloud/confidential-ai/confidential-gpu/model-template.mdx
@@ -3,11 +3,11 @@ description: This guide will help you deploy and manage AI models in a secure, c
 title: Model Template
 ---
 
-## Overview
+## Why use model templates?
 
 If your preferred model isn't available in the Confidential AI API, you can deploy and manage custom AI models using our model template on GPU TEE.
 
-## Deploy Your Model
+## Deploy your model
 
 Navigate to the **Confidential AI Models** tab in your Phala Cloud dashboard. You'll see available model templates ready for deployment.
 
@@ -21,7 +21,7 @@ Don't see your preferred model? We can add custom models—just reach out throug
 
 Pick your model and hit **Deploy** to get started.
 
-## Configure Your Deployment
+## Configure your deployment
 
 You'll need to fill in a few details to customize your setup:
 
