--- a/phala-cloud/confidential-ai/confidential-model/confidential-ai-api.mdx
+++ b/phala-cloud/confidential-ai/confidential-model/confidential-ai-api.mdx
@@ -109,5 +109,6 @@ Once you finished your secure request, every response comes with cryptographic p
 
 ## Next Steps
 
-- [Tool Calling](/phala-cloud/confidential-ai/confidential-model/tool-calling) will help you call tools from your AI models.
-- [Structured Output](/phala-cloud/confidential-ai/confidential-model/structure-output) help you get structured output from your AI models.
+- [Tool Calling](/phala-cloud/confidential-ai/confidential-model/tool-calling) help you call tools from your AI models.
+- [Images and Vision](/phala-cloud/confidential-ai/confidential-model/images-and-vision) help you use images and vision models in Confidential AI.
+- [Structured Output](/phala-cloud/confidential-ai/confidential-model/structured-output) help you get structured output from your AI models.
